--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,142 @@
-html {
-  background: #0025ff;
-  color: #fff;
+body {
+  background: tomato;
+  color: black;
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+header {
+  border-bottom: 10px rgb(105, 31, 18) solid;
+  margin: 0;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.logo {
+  width: 200px;
+  align-self: center;
+}
+
+.navigation {
+    margin: 0;
+    padding: 1.5rem 0;
+    border-radius: var(--radius);
+    display: flex;
+    justify-content: flex-end;
+    align-items: baseline;
+    flex-wrap: wrap;
+  }
+  
+  .nav-item {
+    list-style: none;
+    margin-right: 2rem;
+  }
+  
+  .nav-item a {
+    text-decoration: none;
+    color: black;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 200ms ease-in;
+  }
+  
+  .nav-item a:hover{
+    color: rgb(116, 15, 15);
+
+}
+
+.big-news {
+  border-bottom: 5px rgb(105, 31, 18) solid;
+  display: flex;
+  flex-direction: column;
+  background: whitesmoke;
+  
+}
+
+.big-image {
+  padding:8px;
+}
+
+.big-text {
+  height: auto;
+  width: 400px;
+  align-self: center;
+  text-align: justify;
+}
+
+.small-news {
+  border-bottom: 5px rgb(105, 31, 18) solid;
+  margin: 5px;
+  display: grid;
+  grid-template-columns: 1fr,1fr,1fr,1fr;
+  grid-gap: 5px;
+}
+
+.small {
+  padding: 8px;
+  border: 1px solid #fff;
+  margin: 0 auto;
+  background: #fff;
+  border-bottom: 40px solid #fff;
+  border-radius: 0px;
+  box-shadow: 0px 8px 3px -8px #111,
+              0px 6px 0px -3px white,
+              0px 11px 3px -8px #111,;
+  width: 400px;
+  height: 400px;
+  }
+
+.small-image  {
+  justify-self: center;
+  filter: grayscale(100%);
+  transition: 1s ease;
+}
+
+.small-image:hover {
+  filter: grayscale(0%);
+} 
+
+
+/* tablet */
+@media (min-width: 768px){
+  header {
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .logo {
+    width: 250px;
+    align-self: flex-start;
+    margin: 1rem;
+  }
+
+  .big-news {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .big-text {
+    margin-right: 1rem;
+    margin-left: 1rem;
+  }
+
+  .small-news {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+
+  .small {
+    width: 200px;
+    height: 200px;
+  }
+
+}
+
+@media (min-width: 992px){
+  .big-text{
+    margin-right: 4rem;
+  }
 }
