--- a/code/style.css
+++ b/code/style.css
@@ -8,7 +8,9 @@ body {
 
 
 h1 {
-  font-size: 18px;
+  font-family: Raleway;
+  font-size: 1.5rem;
+  font-weight: 200;
   color: #333;
   margin-left: 10px;
 }
@@ -32,38 +34,28 @@ p {
 }
 
 a {
-  font-size: 1,125 rem;
+  font-size: 1rem;
   font-weight: 500;
   color: #333;
   text-decoration: none;
 }
 
-/* header {
-  background-color: #fff;
-  padding: 24px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0;
-} */
-
-header {
-  background-color: #fff;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.navigation a {
+  font-size: 1rem;
+  margin-left: 24px;
 }
 
-/* footer {
-  background-color: #001ed2;
-  width: 100%
-  height: auto;
-  padding:: 40px;
-} */
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; 
+  padding: 1.5rem 2rem 1.5rem 2rem;
+}
+
 
 .footer {
   position: fixed;
-  padding: 24px;
+  padding: 1rem 2rem 1rem 2rem;
   left: 0;
   bottom: 0;
   width: 100%;
@@ -71,16 +63,17 @@ header {
   color: white;
 }
 
-.navigation {
-  padding: 1rem
-  font-size: 1.125em;
+
+.button-link {
+  font-size: 14px;
+  text-align: center;
+  color: #fff;
+  background: rgb(224, 124, 9);
   text-decoration: none;
-  margin-right: 1rem;
-  margin-left: 1rem;
-
+  border-radius: 50px;
+  padding: 12px 24px;
+  min-width: 185px;
 }
-
-
 
 
 .technigo-logo {
@@ -91,8 +84,6 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
-
 }
 
 
@@ -104,7 +95,8 @@ header {
 }
 
 .big-news-img {
-  width: 50%
+  /* width: 50% */
+  object-fit: cover;
 }
 
 
@@ -142,6 +134,7 @@ header {
   width: 100%;
 }
 
+
 /* media queries */
 
 @media (min-width: 768px) {
@@ -169,8 +162,9 @@ header {
   @media (min-width: 768px) and (max-width: 991px) {
 
     .big-news-img {
-      width: 40%;
-      height: 200px;
+      width: 60%;
+      height: 400px;
+      /* object-fit: cover; */
       
     }
 
@@ -185,12 +179,11 @@ header {
   }
  
 
-@media (max-width: 767px) {nt
+@media (max-width: 767px) {
 
-  /* varför funkar inte det här? */
-    h2 {
-      font-size: 32px;
-    }
+  .header {
+    padding: 1rem 1rem 1rem 1rem;
+  }
 
     .big-news-container {
       flex-direction: column;
