--- a/code/style.css
+++ b/code/style.css
@@ -1,52 +1,82 @@
 html {
   background: #f7f7fa;
   color: rgb(8, 8, 8);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 @media (min-width: 668px) {
-  header {
+.grid-container-top {
     display: flex;
+    align-items: center;
     justify-content: space-between;
+    padding: 30px;
     color: violet;
   }
 }
 
 
-.header {
-  border: 2px solid;
+.grid-container-top {
+  border: transparent;
   height: 50px;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 5px;
+  padding: 20px;
+  align-items: center;
   justify-content: space-between;
 }
 
-.logo {
-  width: 100px;
+.title {
+  grid-column: span 1;
+}
+
+.meny {
+  grid-column: span 2;
 }
 
 .big-news {
  border: 2px solid;
- height: 500px;
+ height: 1000px;
  display: flex;
  align-items: center;
  justify-content: center;
 }
 
 .news-img {
+  height: 600px;
+  width: 600px;
   margin: 5px;
-  width: 100px;
-  height: 40px;
+}
+
+.undertitle {
+  margin: 5px;
+  font-style: italic;
+  font-size: small;
+  padding-left: 10px;
+ } 
+
+h2 {
+  margin: 5px;
   padding: 10px;
- }
+}
 
 .big-news-text {
   margin: 5px;
-  width: 100px;
-  height: 40px;
   padding: 10px;
- }
+ } 
+
+ button {
+  height: 30px;
+  display: block;
+  padding: 10px 20px;
+  border: 1px solid
+  background-color: #f7f7fa;
+  font-size: 12px;
+  justify-content: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
 .flex-parent {
-  border: 2px solid;
   height: 500px;
   display: flex;
   justify-content: center;
@@ -62,9 +92,10 @@ html {
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 10px; 
 }
 
-.flex-child.red {
+.flex-child1 {
   flex-direction: column;
 }
 
@@ -73,16 +104,6 @@ img {
   height: 200px;
 }
 
-button {
-  height: 40px;
-  display: block;
-  padding: 10px 20px;
-  border: none;
-  background: crimson;
-  color: white;
-  font-family: fantasy;
-  font-size: 20px;
-}
 
 .grid-container {
   border: 2px solid blue;
