--- a/code/style.css
+++ b/code/style.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
   font-family: 'Courier New', Courier, monospace;
+  margin: 0;
 }
 
 .header {
@@ -10,6 +11,7 @@
   animation: header 2s ease-in-out ;
   margin-bottom: 10px;  
   border-bottom: 2px solid black;
+  animation: header 2s ease-in-out;
 }
 
 .logo {
@@ -21,8 +23,8 @@ h1 {
   text-transform: uppercase;
 }
 
-.navigation {
-  padding: 0 10px;
+.navigation a {
+  margin: 0 10px;
   font-size: 1.2em;
   text-decoration: none;
 }
@@ -46,82 +48,70 @@ text-decoration: underline;
 color: red;
 }
 
-/* main news */
-
 .big-news {
-  display: flex;
-  animation: start 2s ease-in-out;
+    display: grid;
+    grid-template-columns: repeat(2, 50%);
+    margin: 10px 5px;
+    animation: start 2s ease-in-out;
 }
 
 .big-news-img {
-  width: 40%;
-  margin-bottom: 10px;
-  box-shadow: 2px 6px 4px rgba(0,0,0,1);
-}
-
-.big-news-img:hover {
-  opacity: 0.7;
+    max-width: 90%;
+    box-shadow: 4px 6px 6px rgba(0, 0, 0, 0.8);
+    margin-left: 5px;
 }
 
 .intro {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  color: red;
-  max-width: 60%;
-  text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    width: 80%;
+    line-height: 1.6;
 }
-/*small news */
 
 .container {
-  border: 2px solid black;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-  padding: 10px 5px 10px 5px;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-template-rows: auto auto;
+    justify-items: center;
+    border: 2px solid black;
+    margin: 10px;
+    padding: 20px 20px 0 20px;
 }
 
 .small-news {
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 22%;  
-  margin: 10px 15px 10px 0;
-  padding: 0 5px 5px 5px;
-  box-shadow: 2px 6px 4px rgba(0,0,0,0.8);
-  text-align: center;
+  background-color: lightgray;
+    max-width: 80%;
+    box-shadow: 2px 6px 4px rgba(0,0,0,0.8);
+    padding-bottom: 10px;
+    margin: 30px 0;
+    text-align: center;
+    line-height: 1.6;
 }
 
-h3 {
-  font-size: 1em;
+.small-news img {
+    width: 240px;
+    padding: 10px 10px 30px 10px;
 }
 
-.container img{
-  width: 100%;
+  .small-news p {
+      padding-top: 10px;
+  }
+
+  footer {
+    text-align: center;
+    margin-top: 30px;
+    border-top: 3px solid black;
+    padding-top: 10px;
 }
 
-/* footer */
-
-footer {
-  margin-top: 20px;
-  border-top: 2px solid gray;
+  .links img {
+    filter: grayscale(30%);
 }
 
-.links {
-  background-color: rgba(211, 211, 211, 0.445);
-  font-size: 12px;
-  text-align: center;
-}
 
-.top a {
-  text-decoration: none;
-}
-
-/* animation */
-
-@keyframes header {
+  @keyframes header {
   0% {
       transform: translateY(-100%);
       opacity: 0;
@@ -144,49 +134,61 @@ footer {
   }
 }
 
-/* media queries */
 
-@media (min-width: 768px) and (max-width: 1024px){
-.header {
-  display: flex;
-  flex-direction: column;
-  animation: none;
-  }
+@media (min-width: 768px) and (max-width: 1024px) {
+    header {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+    }
 
-.big-news{
-  font-size: 1.5em;
-  animation: none;  
-  }
+    .intro {
+        font-size: 1.2em;
+    }
 
-.small-news {
-  width: 45%;
-  font-size: 1.4em;
-  }
-  }
+    .big-news {
+        display: grid;
+        grid-template-columns: auto auto;
+            }
 
-  @media (min-width: 0) and (max-width: 767px) {
-  .header, .big-news {
-    animation: none;
-    display: flex;
-    flex-direction: column;
-  }
+      .container {
+          display: grid;
+          grid-template-columns: auto auto;
+      }
+}
 
-  .header .navigation {
-   font-size: 1em;
-  }
 
-  .big-news-img {
-    width: auto;
-  }
+@media (min-width: 0) and (max-width: 767px) {
+    .header {
+        display: flex;
+        flex-direction: column;
+        animation: none;
+      }
+      .navigation {
+          display: none;
+      }
 
-  .intro { 
-    font-size: 1.5em;
-    min-width: 100%;
-  }
+      .big-news {
+          display: flex;
+          flex-direction: column;
+          text-align: center;
+          align-items: center;
+          animation: none;
+      }
 
-.small-news {
-    width: 100%;
-    font-size: 1.5em;
-    text-align: center;
-  }
-  }
+      .intro {
+          text-align: center;
+          margin-top: 10px;
+          
+      }
+
+    .container {
+        display: grid;
+        grid-template-columns: 1fr;
+        align-items: center;
+      }
+
+      .small-news img {
+          width: 100%;
+      }
+}
