--- a/code/style.css
+++ b/code/style.css
@@ -11,7 +11,7 @@ header {
 }
 .logo {
   width: 60px;
-  margin: 5px;
+  margin: 10px;
 }
 .logo:hover {
   transform: rotate(-30deg);
@@ -23,35 +23,64 @@ nav {
   font-family: 'Julius Sans One', sans-serif;
 
 }
+.link {
+  font-family: 'Martel Sans', sans-serif;
+  font-size: 15px;
+  color: black;
+  text-decoration: none;
+  letter-spacing: 2px;
+}
+.link:hover{
+  color: red;
+  
+}
 .site-name {
   font-family: 'Six Caps', sans-serif;/*'Pacifico', cursive;*/
-  letter-spacing: 2px;
+  letter-spacing: 3px;
   font-size: 50px;
  /* margin-top: 1rem;*/
 }
 .big-news {
   display: flex;
   flex-direction: column;
-  margin: 5px;
+  margin: 10px;
   padding: 20px;
   background-color: white;
+  border-radius: 10px;
+  box-shadow: 4px 4px 4px rgb(99, 99, 99);
+}
+.big-news-image {
+  border-radius: 10px 10px 0 0 ;
 }
 .big-news-text {
+  line-height: 1.5;
   border: solid 2px;
   padding: 20px;
+  border-radius: 0 0 10px 10px;
 }
-hr {
-  border: double black 2px;
+.big-text {
+  width: 250px;
+  font-size: 40px;
+  padding: 10px;
+  margin: 10px;
+  border-top: solid 3px;
 }
 /*Grid collumn for the small articles*/
 .small-news {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  margin: 5px;
 }
 .article {
+  line-height: 1.5;
   grid-column: span 4;
-  padding: 5px;
+  background-color: aliceblue;
+  border-radius: 10px;
+  box-shadow: 4px 4px 4px rgb(99, 99, 99);
+  padding: 10px;
+  margin: 20px 5px;
+}
+.small-image {
+  border-radius: 10px 10px 0 0px;
 }
 footer {
   background-color: black;
@@ -80,15 +109,23 @@ footer {
   }
   .big-news {
     flex-direction: row;
-    background-color: violet;
     margin: 10px;
+    border-radius: 10px;;
   }
   .big-news-image {
     width: 50%;
+    border-radius: 10px 0 0 10px;
   }
   .big-news-text {
     width: 50%;
     background-color: azure;
+    border-radius: 0 10px 10px 0;;
+  }
+  .big-text {
+    border-top: none;
+    border-left: solid 3px;
+    display: inline-block
+    
   }
   .small-news {
     margin: 10px;
@@ -105,7 +142,7 @@ footer {
   }
   .site-name {
     display: flex;
-    width: 20%;
+    width: 26%;
   }
   nav {
     display: flex;
@@ -113,8 +150,8 @@ footer {
     justify-content: flex-end;  
   }
  nav a {
-   padding-left: 7rem;
-   margin-right: 10px;
+   padding-left: 5rem;
+   margin-right: 30px;
  }
  .tablet-logo {
    display: none;
