--- a/code/style.css
+++ b/code/style.css
@@ -2,10 +2,16 @@ html {
   background: #8c8d9240;
   color: #404040;
   font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+  width: 100%;
+  align-items: center;
 }
 a:link {
   color: black;
 }
+
+/* hover effect */
+
 /* visited link */
 a:visited {
   color: #404040;
@@ -21,9 +27,10 @@ a:active {
   color: #d09a99;
 } 
 
+/* header */
+
 h1, h2{
   font: 70px;
-  border-top: 0;
 }
 
 .top-header{
@@ -32,7 +39,7 @@ h1, h2{
   justify-content:space-evenly;
   align-items: center;
   height: 360px;
-  width: 1360px;
+  width: 100%;
   border-radius: 1rem;
   padding: 25px;
   background: linear-gradient(
@@ -65,18 +72,19 @@ h1, h2{
 }
 
 .nav-bar{
-  width: 1400px;
-  height: 100px;
+  width: 100%;
   display: flex;
-  text-align: center;
-  justify-content: space-evenly;
+  text-align: right;
+  justify-content:space-evenly;
   font-size: 24px;
   border-radius: 1rem;
 }
 
+/* news content */
+
 .big-news{
   height: 500px;
-  width: 1400px;
+  width: 100%;
   display: grid;
   grid-template-columns:1fr 1fr;
   grid-gap: 5px;
@@ -110,7 +118,7 @@ h1, h2{
 
 .small-news{
   height: 600px;
-  width: 1400px;
+  width: 100%;
   display: grid;
   grid-template-columns:1fr 1fr 1fr 1fr;
   grid-gap: 5px;
@@ -159,22 +167,128 @@ h1, h2{
   box-shadow: 5px 10px;
 }
 
+/* footer */
+
 .footer-info{
-  height: 200px;
-  display: flex;
-  flex-direction: column;
-  align-items:center;
-  justify-content:space-around
-  padding: 5px;
-  font-size: 30px;
-  border:  1px solid black;
-  border-radius: 1rem;
-  grid-column: span 4;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 1rem;
+    position:absolute;
+    bottom: -1460px;
+    width:100%;
+    height:200px; 
 }
 
 .footer-pic{
-  height: 200px;
-  width: 200px;
+  height: 160px;
+  width: 160px;
   border-top: 0;
   padding-bottom: 10px;
+}
+
+/* mobile size */
+@media (max-width: 766px){
+
+.nav-bar{
+    display: none;
+}
+
+.big-news {
+  width: 100%;
+  display: grid;
+  grid-template-columns:1fr;
+  grid-gap: 5px;
+  border-radius: 1rem;
+  border:  1px solid black;
+  align-items: center;
+  margin: 8px 5px 5px 5px;
+}
+
+.grid-1{
+  /* display: flex;
+  flex-flow: column; */
+  padding: 5px;
+  margin: 10px;
+  padding: 25px;
+  align-items: right;
+  border-radius: 1rem;
+  border:  1px solid black;
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+
+}
+
+.small-news{
+  height: 600px;
+  width: 100%;
+  display: grid;
+  grid-template-columns:1fr;
+  grid-gap: 5px;
+  padding: 5px;
+}
+
+.grid-2, .grid-7 {
+  display: flex;
+  border:  1px solid black;
+  border-radius: 1rem;
+  padding: 5px;
+  grid-column: span 1;
+  margin: 10px;
+  padding: 25px;
+  align-items: center;
+  justify-content: center;
+}
+
+.medium-news{
+  flex-flow: column;
+  text-align: center;
+}
+
+.grid-3, .grid-4, .grid-5, .grid-6 {
+  display: flex;
+  flex-flow: column;
+  border:  1px solid black;
+  border-radius: 1rem;
+  padding: 2rem;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.small-pic{
+  height: 300px;
+  width: 300px;
+  border-radius: 1rem;
+  box-shadow: 5px 10px;
+}
+
+.footer-info{
+  bottom: -3070px;
+  width:100%;
+  height:200px; 
+}
+
+
+/* tablet size */
+
+@media (min-width: 767px) and (max-width: 991px){
+
+.footer-info{
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+}
+
+/* desktop size */
+
+@media (min-width: 992px){
+  
 }
