--- a/code/style.css
+++ b/code/style.css
@@ -1,24 +1,26 @@
 body {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
   box-sizing: border-box;
   margin: 0;
+  background-color: whitesmoke;
 }
 
-
-
 header {
+  font-family: 'Rampart One', cursive;
   display: flex;
-  background-color: aquamarine;
+  background-color: #c7ccd1;
   justify-content: center;
   width: 100%;
+  border: 1px solid 
+}
+
+.header-logo {
+  width: 15%;
 }
 
 .site-logo {
-  width: 300px;
-  height: 300px;
   object-fit: cover;
-  border-radius: 50%;
-  border: 1px solid red;
+  height: auto;
   display: none;
 }
 
@@ -32,8 +34,14 @@ nav {
 
 .nav-menu {
   padding: 5px;
+  color: #ffff66;
 }
 
+article > h1 {
+  color: red;
+  font-size: 25px;
+  text-decoration: underline;
+}
 .big-news, .all-events, .all-music {
   display: flex;
   flex-direction: column;
@@ -42,23 +50,28 @@ nav {
 .big-news-foto, .events-photo, .music-photo {
   width: 100vw;
   height: 100vw;
-  margin: 5px;
 }
 
-.events div {
+.events, .music {
   display: block;
   text-align: left;
 }
 
+footer {
+  display: flex;
+  align-content: center;
+  flex-direction: column;
+}
 
-@media (min-width: 768px) {
+
+@media (min-width: 668px) {
 
   header {
     flex-direction: column;
   }
 
   .site-logo {
-    display: flex;
+    display: block;
     align-self: center;
   }
 
@@ -74,6 +87,7 @@ nav {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 20px;
   }
 
   .big-news-foto, article {
@@ -85,22 +99,52 @@ nav {
     text-align: center;
   }
 
- .all-events {
+ .all-events, .all-music {
    flex-wrap: wrap;
    flex-direction: row;
  }
 
 
-.events {
-  width: 50%;
+.events, .music {
+  width: 48%;
+  border: 1px solid black;
+  margin-right: 10px;
+  margin-top: 10px;
 }
 
-.events-photo {
+.events-photo, .music-photo {
   width: 100%;
+  height: 50vw;
 }
   
 
- 
+ @media (min-width: 992px) {
+
+  header {
+    flex-direction: row;
+    justify-content: left;
+  }
+
+ .site-logo {
+   align-self: left;
+   width:  20%;
+   height: 20%;
+   border-radius: 0;
+   object-fit: none;
+ }
+
+ .events, .music {
+  width: 24%;
+  margin-right: 6px;
+}
+
+.events-photo, .music-photo {
+  width: 100%;
+  height: 25vw;
+}
+
+   
+ }
 
  
 
