--- a/style.css
+++ b/style.css
@@ -540,6 +540,7 @@ font-size: 70%;
   .navbar-items #nav-img {
     order: 2;
     padding: 0 4% 0 0;
+    margin-right: 1%;
     height: 4vh;
     opacity: 80%;
     visibility: visible;
