--- a/code/style.css
+++ b/code/style.css
@@ -7,7 +7,8 @@ html {
 
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: rgb(199, 215, 221);
+  background-color: rgb(232, 240, 242);
+  color: rgb(5, 55, 66)
 }
 
 header {
@@ -16,7 +17,8 @@ header {
   left: 0;
   width: 100%;
   padding-bottom: 0;
-  background-color: rgb(183, 196, 204, .93);
+  background-color: rgb(5, 55, 66, .93);
+  color: white;
 }
 
 
@@ -64,7 +66,7 @@ i {
   height: auto;
   margin-left: auto;
   margin-right: auto;
-  padding: 3px;
+  padding: 1px;
   box-shadow: 3px 3px 4px grey;
   background-color: white;
 }
@@ -83,14 +85,20 @@ i {
   justify-content: space-evenly;
 }
 
-.contact-paragraph, .footer-text {
+.contact-paragraph {
   text-align: center;
   font-size: 17px;
   margin-top: 10px;
 }
 
 .fab {
-  color: black;
+  color: rgb(5, 55, 66);
+}
+
+.footer-text {
+  margin-top: 50px;
+  font-size: 12px;
+  text-align: center;
 }
 
 
