--- a/style.css
+++ b/style.css
@@ -66,7 +66,8 @@ body {
   grid-column: span 12;
   height: 8vh;
   display: flex;
-  width: 100%;
+  
+  width: 105%;
   z-index: 12;
   grid-template-columns: repeat(12, 0.5fr);
   grid-template-rows: repeat(12, 0.5fr);
@@ -126,7 +127,7 @@ body {
 
 .navbar-items #nav-img {
   height: 5vh;
-  margin: 0.8% 0.5% 0 0.5%;
+  margin: 0.9% 0.5% 0 0.5%;
   visibility: visible;
 
 }
@@ -354,19 +355,20 @@ height: 65%;
 
 
 
-@media (min-width: 1025px) and (max-width: 1499px) {
 
-.container-header{
 
-  margin-top: 5%;
+
+@media (min-width: 1500px){
+  .navbar-items #nav-img {
+    height: 4vh;
+    margin: 0.8% -3% 0% 0%;
+    opacity: 85%;
+    
+  }
 
 }
 
-
-
-}
-
-@media (min-width: 1500px) and (max-width: 1920px) {
+@media (min-width: 1650px) and (max-width: 1920px) {
  
   .nawbar {
     height: 5vh;
@@ -374,14 +376,14 @@ height: 65%;
   }
 
   .navbar-items {
-    margin: -0.1% 0.9% 0% -1.2%;
+    margin: -0% 0.9% 0% -1.2%;
     
   }
  
 
   .navbar-items #nav-img {
     height: 4vh;
-    margin: 0.8% -1% 0% 1.3%;
+    margin: 0.9% -1% 0% 1.3%;
     opacity: 85%;
     
   }
@@ -515,6 +517,7 @@ font-size: 70%;
     height: 5vh;
     padding-left: 0%;
     margin-left: -0.5%;
+    
     display: flex;
     width: 100%;
     z-index: 12;
@@ -870,10 +873,16 @@ padding-bottom: -0.2%;
       
     }
 
-
+    .navbar-items #nav-img {
+     margin-left: 0.1%;
+      padding: 0 1% 0 0;
+      height: 3.5vh;
+     
+     
+    }
 
     .nawbar-btn {
-      font-size: 70%;
+      font-size: 75%;
       margin: 0% 1% 0 1%;
     }
 .regular-news-cards{
