--- a/code/style.css
+++ b/code/style.css
@@ -13,9 +13,8 @@ a {
 a:hover{
   color: lightseagreen;
   cursor: pointer;
+  text-decoration: underline solid lightseagreen;
 }
-
-
 
 /* header -------------------------*/ 
 header{
@@ -23,15 +22,25 @@ header{
   justify-content: space-between;
   background-color:rgb(185, 178, 74);
   height: 60px;
-
- 
 }
 .nav-bar{
-  display: none;
   align-items: center;
   width: 100%;
   height: 60px;
+  display: inline-flex;
+  justify-content: space-around;
+}
 
+.nav-bar :first-child{
+  display: none;
+}
+
+.nav-bar :last-child{
+  display: none;
+}
+
+.nav-bar img{
+  display: none;
 }
 
 .logo{
@@ -66,14 +75,10 @@ header{
   align-items: center;
   justify-content: center;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  animation-duration: 5s;
-  animation-delay: 0s;
-  animation-iteration-count: infinite;
-  animation-direction: alternate-reverse;
 }
 
 .animation.one {
-   animation-name: subscribe;
+   animation: subscribe 5s infinite alternate-reverse;
 }
 
 @keyframes subscribe {
@@ -91,7 +96,7 @@ header{
 .animation.two {
   color: red;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-   animation-name: latest;
+  animation: latest 5s infinite alternate-reverse;
 }
 .animation.two h1 {
   margin: 0px;
@@ -110,7 +115,7 @@ font-size: 0.7rem;
 }
 
 
-/* ---------------animation3 */
+/* ---------------animation3: video------ */
 .animation.three {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   background: rgba(142, 68, 173, 1);
@@ -142,13 +147,6 @@ font-size: 0.7rem;
   margin: 0rem 0.5rem 0.5rem 0.5rem;
   align-items: center;
   box-shadow: 0px 0px 5px 1px black;
-  flex-shrink: 1;
-
-}
-
-.big-image {
-   justify-content: center;
-  
 }
 
 .big-image img{
@@ -156,7 +154,6 @@ font-size: 0.7rem;
  height: auto;
  border: 1px solid lightgrey;
  vertical-align: middle;
-
 }
 
 .big-text{
@@ -182,7 +179,6 @@ font-size: 0.7rem;
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
-
 }
 
 .small-square{
@@ -205,7 +201,6 @@ font-size: 0.7rem;
   height: 100%;
   width: 100%;
   object-fit: contain;
-  
 }
 
 .small-img-container{
@@ -224,11 +219,9 @@ font-size: 0.7rem;
 margin: 5px 10px;
 }
 
-
 .small-text h3, h2{
   margin: 5px;
 }
-
 
 
 /* video -------------------------*/ 
@@ -240,14 +233,11 @@ margin: 5px 10px;
   width: 95%;
   margin-top: 1rem;
   margin-left: 0.5rem;
-
-  
 }
 
 .video-card{
   grid-column: 1 / span 2;
   width: 100%;
-  
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr;
@@ -264,24 +254,30 @@ width: 100%;
 .video-text{
 grid-column: 2/2;
 width: 100%;
-margin: 5px;
+margin: 10px;
 font-size: 0.8rem;
 }
 
 .video-text p {
-font-family: cursive;
+font-style: italic;
 }
 
 /* -------footer------ */
 footer{
 background-color: rgb(138, 132, 56);
 margin-top: 3rem;
-display: flex;
+padding: 1rem 0rem;
+display: grid;
 justify-content: center;
 font-size: small;
 font-style: italic;
+text-align: center;
 }
 
+footer a{
+font-size: 1rem;
+font-style: normal;
+}
 
 
 
@@ -291,6 +287,18 @@ font-style: italic;
 .logo{
   display: none 
 } 
+
+.nav-bar img{
+  display: flex;
+}
+
+.nav-bar :first-child{
+  display: flex;
+}
+
+.nav-bar :last-child{
+  display: flex;
+}
 
 .nav-bar{
   display: inline-flex;
@@ -305,7 +313,6 @@ font-style: italic;
   display: inline-flex;
 }
   
-
 .big-text p {
   display: flex;
 }
@@ -331,7 +338,6 @@ font-style: italic;
 .nav-bar img{
   display: none;
 }
-
 }
 
 
