--- a/code/style.css
+++ b/code/style.css
@@ -80,7 +80,6 @@ nav a {
 	color: #feffff;
 	padding: 0px 4px 0px 4px;
 	text-decoration: none;
-	/* width: 20%; */
 	border-left: 1px solid #405e93;
 	border-top: 1px solid #405e93;
 }
@@ -94,7 +93,6 @@ nav a.last-nav {
 main {
 	display: flex;
 	flex-direction: column;
-
 	padding: 0px 10px 0px 10px;
 }
 .big-news-container {
@@ -118,7 +116,6 @@ main {
 .small-news-card {
 	display: flex;
 	flex-direction: column;
-	/* margin: 10px 0px 10px 0px; */
 	border: 1px solid black;
 }
 .small-news-card-img {
@@ -131,18 +128,11 @@ footer {
 }
 
 @media (min-width: 768px) {
-	/* main { */
-	/* max-width: 768px; */
-	/* --contentWidth: 768px;
-		padding: 1rem max(2rem, 50vw - var(--contentWidth) / 2); */
-	/* margin: auto; */
-	/* } */
 	header,
-	main {
+	main,
+	footer {
 		--contentWidth: 768px;
 		padding: 1rem max(2rem, 50vw - var(--contentWidth) / 2);
-		/* padding: 0px 10px 10px 10px; */
-		/* margin: auto; */
 	}
 	nav a.first-nav,
 	a.last-nav {
@@ -153,7 +143,6 @@ footer {
 	.big-news-container {
 		flex-direction: row;
 		justify-content: space-between;
-		/* height: 40vw; */
 	}
 	.small-news-container {
 		flex-direction: row;
@@ -161,7 +150,7 @@ footer {
 		flex-flow: wrap;
 	}
 	.small-news-card {
-		width: 46%;
+		width: 48.9%;
 		max-height: 50vh;
 	}
 	.big-news-card-img {
@@ -181,14 +170,15 @@ footer {
 
 @media (min-width: 992px) {
 	header,
-	main {
+	main,
+	footer {
 		--contentWidth: 992px;
 	}
 	main {
 		max-width: 992px;
 	}
 	.small-news-card {
-		width: 22%;
+		width: 23.9%;
 	}
 	.header-btn-small {
 		display: initial;
