--- a/code/style.css
+++ b/code/style.css
@@ -1,10 +1,14 @@
-html {
+
+
+body {
   background: #8c8d9240;
   color: #404040;
   font-family: 'Montserrat', sans-serif;
   font-size: 18px;
   width: 100%;
   align-items: center;
+  box-sizing: border-box;
+  margin: 0;
 }
 a:link {
   color: black;
@@ -39,7 +43,6 @@ h1, h2{
   justify-content:space-evenly;
   align-items: center;
   height: 360px;
-  width: 100%;
   border-radius: 1rem;
   padding: 25px;
   background: linear-gradient(
@@ -84,14 +87,14 @@ h1, h2{
 
 .big-news{
   height: 500px;
-  width: 100%;
+  /* width: 100%; */
   display: grid;
   grid-template-columns:1fr 1fr;
   grid-gap: 5px;
   border-radius: 1rem;
   border:  1px solid black;
   align-items: center;
-  margin: 8px 5px 5px 5px;
+  margin-top: 10px;
 }
 
 .grid-1{
@@ -99,7 +102,7 @@ h1, h2{
   flex-flow: column;
   padding: 5px;
   grid-column: span 1;
-  margin: 10px;
+  /* margin: 10px; */
   padding: 25px;
   align-items: right;
   justify-content: space-evenly;
@@ -118,7 +121,7 @@ h1, h2{
 
 .small-news{
   height: 600px;
-  width: 100%;
+  /* width: 100%; */
   display: grid;
   grid-template-columns:1fr 1fr 1fr 1fr;
   grid-gap: 5px;
@@ -131,7 +134,7 @@ h1, h2{
   border-radius: 1rem;
   padding: 5px;
   grid-column: span 2;
-  margin: 10px;
+  /* margin: 10px; */
   padding: 25px;
   align-items: center;
   justify-content: center;
@@ -180,7 +183,8 @@ h1, h2{
     position:absolute;
     bottom: -1460px;
     width:100%;
-    height:200px; 
+    height:200px;
+    margin: 0;
 }
 
 .footer-pic{
@@ -209,20 +213,15 @@ h1, h2{
 }
 
 .grid-1{
-  /* display: flex;
-  flex-flow: column; */
+  display: flex;
+  flex-flow: column;
   padding: 5px;
-  margin: 10px;
+  margin-top: 55px;
   padding: 25px;
   align-items: right;
   border-radius: 1rem;
   border:  1px solid black;
   display: block;
-  margin-block-start: 1em;
-  margin-block-end: 1em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px;
-
 }
 
 .small-news{
@@ -232,6 +231,7 @@ h1, h2{
   grid-template-columns:1fr;
   grid-gap: 5px;
   padding: 5px;
+  margin-top: 290px;
 }
 
 .grid-2, .grid-7 {
@@ -267,10 +267,11 @@ h1, h2{
   width: 300px;
   border-radius: 1rem;
   box-shadow: 5px 10px;
+  margin-right: 10px;
 }
 
 .footer-info{
-  bottom: -3070px;
+  bottom: -3350px;
   width:100%;
   height:200px; 
 }
@@ -290,5 +291,9 @@ h1, h2{
 /* desktop size */
 
 @media (min-width: 992px){
-  
+
+  .footer-info{
+    max-width: 1200px;
+    margin: 0 auto;
+  }
 }
